unpackaged/main/default/objects/pse__Utilization_Setup__c/pse__Utilization_Setup__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__UtilizationSetupHelp</customHelpPage>
    <description>Stores the settings for utilization runs.</description>
    <label>Utilization Setup</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Utilization Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>