unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Assignment_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Batch_Size__c</fullName>
    <defaultValue>250</defaultValue>
    <description>The maximum number of assignment records to process in a single batch for a utilization run.</description>
    <inlineHelpText>The maximum number of assignment records to process in a single batch for a utilization run.</inlineHelpText>
    <label>Assignment Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>