unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <description>The end date for this utilization run.</description>
    <inlineHelpText>The end date for this utilization run.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>