unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Held_Resource_Request_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Held_Resource_Request_Batch_Size__c</fullName>
    <defaultValue>250</defaultValue>
    <description>The maximum number of held resource request records to process in a single batch for a utilization run.</description>
    <inlineHelpText>The maximum number of held resource request records to process in a single batch for a utilization run.</inlineHelpText>
    <label>Held Resource Request Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>