unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Only_Include_Changes__c.field-meta.xml
<CustomField>
    <fullName>pse__Only_Include_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, only records from the earliest change are included in utilization runs.</description>
    <inlineHelpText>When selected, only records from the earliest change are included in utilization runs.</inlineHelpText>
    <label>Only Include Changes</label>
    <type>Checkbox</type>
</CustomField>