unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>The start date for this utilization run.</description>
    <inlineHelpText>The start date for this utilization run.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>