unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Unheld_Resource_Request_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Unheld_Resource_Request_Batch_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <description>The maximum number of unheld resource request records to process in a single batch for a utilization run.</description>
    <inlineHelpText>The maximum number of unheld resource request records to process in a single batch for a utilization run.</inlineHelpText>
    <label>Unheld Resource Request Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>