unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Utilization_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Period__c</fullName>
    <description>The utilization period covered by the utilization run.</description>
    <inlineHelpText>The utilization period covered by the utilization run.</inlineHelpText>
    <label>Utilization Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last, Current and Next Year</fullName>
                <default>true</default>
                <label>Last, Current and Next Year</label>
            </value>
            <value>
                <fullName>Current and Next Year</fullName>
            </value>
            <value>
                <fullName>Last, Current and Next Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>