unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Utilization_Result_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Result_Batch_Size__c</fullName>
    <defaultValue>9900</defaultValue>
    <description>The maximum number of utilization result records to process per batch.</description>
    <inlineHelpText>The maximum number of utilization result records to process per batch.</inlineHelpText>
    <label>Utilization Result Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>