unpackaged/main/default/objects/pse__Utilization_Setup__c/fields/pse__Utilization_Run_Monitor_Interval__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Run_Monitor_Interval__c</fullName>
    <defaultValue>60</defaultValue>
    <description>The frequency in minutes that the Utilization Run Monitor executes after a utilization run has started.</description>
    <inlineHelpText>The frequency in minutes that the Utilization Run Monitor executes after a utilization run has started.</inlineHelpText>
    <label>Utilization Run Monitor Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>